--- a/css/csssass/css/stylesShow.css
+++ b/css/csssass/css/stylesShow.css
@@ -1,3 +1,10 @@
+*{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+}
+
 body {
 	overflow-x: hidden;
 }
@@ -79,7 +86,7 @@ SLIDE
 	opacity: 1;
 }
 
-.fa-circle {
+.carrouselCircle {
 	font-size: 12px;
 }
 
@@ -87,6 +94,7 @@ SLIDE
 
 
 /*Slide*/
+
 
 #slide ul{
 	position: relative;
@@ -128,4 +136,42 @@ TOP
 
 ul, ol{
 	padding: 0;
+}
+
+
+
+@media (max-width:991px) and (min-width:768px) {
+
+	/*Slide*/
+
+	#slide ul{
+		position: relative;
+		margin: auto;
+		height: auto;
+		width:400%;
+	}
+
+	#slide div#slideIzq span{
+		position: absolute;
+		font-size: 30px;
+		color: white;
+		top: 35%;
+		left:50px;
+		text-shadow:0px 0px 10px #000;
+		cursor: pointer;
+	}
+
+	#slide div#slideDer span{
+		position: absolute;
+		font-size: 30px;
+		color: white;
+		top: 35%;
+		right:50px;
+		text-shadow:0px 0px 10px #000;
+		cursor: pointer;
+	}
+
+
+
+
 }
