--- a/css/csssass/css/stylesShow.css
+++ b/css/csssass/css/stylesShow.css
@@ -1,3 +1,11 @@
+html {
+	overflow-x: hidden;
+}
+
+body {
+	overflow-x: hidden;
+}
+
 *{
 	margin: 0;
 	padding: 0;
@@ -5,9 +13,6 @@
 	text-decoration: none;
 }
 
-body {
-	overflow-x: hidden;
-}
 
 
 
